--- a/style.css
+++ b/style.css
@@ -1,22 +1,242 @@
-.dropdown-btn {
-    background-color: #4CAF50;
-    color: white;
+@import url(//fonts.googleapis.com/css?family=VT323);
+
+@font-face {
+    font-family: 'Modern DOS', monospace;
+    src: url("https://github.com/TobinCavanaugh/TobinCavanaugh.github.io/blob/main/ModernDOS8x8.ttf") format('truetype');
+    font-weight: bold;
+}
+
+:root {
+    --inset: 30px;
+    --font: 'Modern DOS', monospace;
+    --amber: #ffbf00;
+    --amberTransp: rgba(255, 191, 0, .4);
+    --amberTranspImage: rgba(255, 191, 0, .2);
+    --amberTranspBorder: rgba(255, 191, 0, .7);
+    --bloomOff: 4px;
+    --bloomAmt: 30px;
+    /*Courier New*/
+}
+
+body {
+    background-color: black;
+    color: var(--amber);
+    margin: 0;
+    padding: 0;
+    font-family: var(--font);
+}
+
+body, body * {
+    --negative-offset: calc(-1 * var(--bloomOff));
+
+    text-shadow: var(--bloomOff) var(--bloomOff) var(--bloomAmt) var(--amberTransp),
+    var(--negative-offset) var(--bloomOff) var(--bloomAmt) var(--amberTransp),
+    var(--negative-offset) var(--negative-offset) var(--bloomAmt) var(--amberTransp),
+    var(--bloomOff) var(--negative-offset) var(--bloomAmt) var(--amberTransp);
+}
+
+body::after {
+    content: "";
+    position: fixed; /* Change position to fixed */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .1) 4px, transparent 5px, transparent 7px, rgba(0, 0, 0, .1) 8px);
+    background-size: 100% 8px;
+    pointer-events: none;
+    animation: scanlines 2s linear infinite;
+}
+
+.bg {
+    position: fixed;
+    top: -50%;
+    left: -50%;
+    right: -50%;
+    bottom: -50%;
+    width: 200%;
+    height: 200vh;
+    background: transparent url('http://assets.iceable.com/img/noise-transparent.png') repeat 0 0;
+    background-repeat: repeat;
+    animation: static-noise .2s infinite;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: none;
+    zoom: 500%;
+}
+
+@keyframes static-noise {
+    0% {
+        transform: translate(0, 0)
+    }
+    10% {
+        transform: translate(-5%, -5%)
+    }
+    20% {
+        transform: translate(-10%, 5%)
+    }
+    30% {
+        transform: translate(5%, -10%)
+    }
+    40% {
+        transform: translate(-5%, 15%)
+    }
+    50% {
+        transform: translate(-10%, 5%)
+    }
+    60% {
+        transform: translate(15%, 0)
+    }
+    70% {
+        transform: translate(0, 10%)
+    }
+    80% {
+        transform: translate(-15%, 0)
+    }
+    90% {
+        transform: translate(10%, 5%)
+    }
+    100% {
+        transform: translate(5%, 0)
+    }
+}
+
+@keyframes scanlines {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 0 +50px; /* Adjust the value to control the scrolling speed */
+    }
+}
+
+
+a {
+    color: var(--amber);
+    text-decoration: underline;
+}
+
+
+header {
+    list-style: none;
+    font-family: var(--font);
+    font-size: 50px;
+}
+
+summary {
+    list-style: none;
+    font-family: var(--font);
+}
+
+summary:hover {
+    background-color: var(--amberTransp);
+    color: var(--amber);
+}
+
+summary::before {
+    content: "[>]";
+    font-weight: normal;
+    float: left;
+    margin-right: 5px;
+}
+
+details[open] summary::before {
+    content: "[V]";
+}
+
+details[open] summary {
+    font-weight: bold;
+    background-color: var(--amberTransp)
+}
+
+
+
+h2:hover {
+
+    background-color: var(--amberTransp);
+    color: var(--amber);
+
+}
+
+/*
+h2::before{
+⭟ ⤹ ↳ ⮑ ⮱ ↪  ⮎ ⇲ ⬑ " "
+    content: "⇲";
+}
+*/
+
+
+h2 {
+    padding-left: var(--inset);
+}
+
+
+p {
+    padding-left: var(--inset); /* Adjust the left padding as needed */
+    font-family: var(--font);
+    font-weight: bold;
+    font-style: italic;
+}
+
+blockquote {
+    padding-left: var(--inset); /* Adjust the left padding as needed */
+    font-family: var(--font);
+    font-weight: normal;
+}
+
+hr {
+    /*border: 2px solid var(--amber);*/
+
+    --negative-offset: calc(-1 * var(--bloomOff));
+
+    box-shadow: var(--bloomOff) var(--bloomOff) var(--bloomAmt) var(--amberTranspBorder),
+    var(--negative-offset) var(--bloomOff) var(--bloomAmt) var(--amberTranspBorder),
+    var(--negative-offset) var(--negative-offset) var(--bloomAmt) var(--amberTranspBorder),
+    var(--bloomOff) var(--negative-offset) var(--bloomAmt) var(--amberTranspBorder);
+}
+
+blockquote{
+    animation: typing 4s steps(40) infinite;
+}
+
+/*@keyframes typing {*/
+/*     from {*/
+/*         width: 0;*/
+/*     }*/
+/*     to {*/
+/*         width: 100%;*/
+/*     }*/
+/* }*/
+
+
+img {
+    margin-left: calc(2 * var(--inset));
+    border: 4px solid var(--amber);
+
+    --negative-offset: calc(-1 * var(--bloomOff));
+
+    box-shadow: var(--bloomOff) var(--bloomOff) var(--bloomAmt) var(--amberTranspImage),
+    var(--negative-offset) var(--bloomOff) var(--bloomAmt) var(--amberTranspImage),
+    var(--negative-offset) var(--negative-offset) var(--bloomAmt) var(--amberTranspImage),
+    var(--bloomOff) var(--negative-offset) var(--bloomAmt) var(--amberTranspImage);
+}
+
+/*This is the top right allow sound button*/
+.top-right-button {
+    position: fixed;
+    top: 10px;
+    right: 10px;
     padding: 10px;
-    border: none;
+
+    border: 2px solid var(--amber);
+    color: var(--amber);
+    background-color: black;
+    font-size: 16px;
     cursor: pointer;
+
+    box-shadow: var(--bloomOff) var(--bloomOff) var(--bloomAmt) var(--amberTranspImage),
+    var(--negative-offset) var(--bloomOff) var(--bloomAmt) var(--amberTranspImage),
+    var(--negative-offset) var(--negative-offset) var(--bloomAmt) var(--amberTranspImage),
+    var(--bloomOff) var(--negative-offset) var(--bloomAmt) var(--amberTranspImage);
 }
 
-.dropdown-content {
-    display: none;
-}
-
-.dropdown-content a {
-    display: block;
-    padding: 10px;
-    text-decoration: none;
-    color: black;
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
-}
