--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: var(--font);
+    
 }
 
 ::selection {
@@ -45,26 +46,19 @@ body {
 }
 
 body, body * {
-   /*filter: blur(1px);*/
-
    text-shadow: 0px 0px var(--bloomText) var(--amber),
    0px 0px var(--bloomText) var(--amber);
 }
 
-
-    /* --negative-offset: calc(-1 * var(--bloomOff));
-    text-shadow: var(--bloomOff) var(--bloomOff) var(--bloomAmt) var(--amberTransp), var(--negative-offset) var(--bloomOff) var(--bloomAmt) var(--amberTransp), var(--negative-offset) var(--negative-offset) var(--bloomAmt) var(--amberTransp), var(--bloomOff) var(--negative-offset) var(--bloomAmt) var(--amberTransp);
-    */
-
+/* Scanlines */
 body::after {
     content: "";
     position: fixed;
-    /* Change position to fixed */
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .1) 4px, transparent 5px, transparent 7px, rgba(0, 0, 0, .1) 8px);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .15) 4px, transparent 5px, transparent 7px, rgba(0, 0, 0, .15) 8px);
     background-size: 100% 8px;
     pointer-events: none;
     animation: scanlines 10s linear infinite;
@@ -80,30 +74,45 @@ body::after {
     height: 200vh;
     background: transparent url('noise-transparent.png') repeat 0 0;
     background-repeat: repeat;
-    animation: static-noise 0.5s infinite;
+    animation: static-noise 0.2s infinite;
     opacity: 1;
     visibility: visible;
     pointer-events: none;
     zoom: 500%;
 }
 
+.centerGradient{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  
+    background: radial-gradient(circle, rgba(255,191,0,0.2) 0%, rgba(0,0,0,0.1) 100%);
+}
+
+
 @keyframes static-noise {
     0% {
-        transform: translate(0, 0);
+      transform: translate(0, 0);
     }
-    25% {
-        transform: translate(-10%, 5%);
+    20% {
+      transform: translate(-10%, 5%);
     }
-    50% {
-        transform: translate(15%, 0);
+    40% {
+      transform: translate(15%, 0);
     }
-    75% {
-        transform: translate(-15%, 0);
+    60% {
+      transform: translate(-15%, 0);
+    }
+    80% {
+      transform: translate(5%, -5%);
     }
     100% {
-        transform: translate(0, 0);
+      transform: translate(0, 0);
     }
-}
+  }
 
 @keyframes scanlines {
     0% {
@@ -217,23 +226,25 @@ blockquote {
 .custom-img {
     margin-left: calc(2 * var(--indent));
     border: 4px solid var(--amber);
-    --negative-offset: calc(-1 * var(--bloomOff));
     box-shadow: 0px 0px var(--bloomLine) var(--amber);
 }
+
 /*This is the top right allow sound button*/
 .top-right-button {
     position: fixed;
 
+
     top: 10px;
     right: 10px;
     padding: 10px;
-
     
-    border: 3px solid var(--amber);
+    border: 0.04vh solid var(--amber);
     color: var(--amber);
     background-color: black;
-    font-size: var(--textSize);
+    font-size: var(--paraSize);
     cursor: pointer;
+    
+    filter: drop-shadow(0px 0px var(--bloomLine));
 
-    box-shadow: 0px 0px var(--bloomLine) var(--amber);
+    /*box-shadow: 0px 0px var(--bloomLine) var(--amber);*/
 }
