--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ header {
     list-style: none;
     font-family: var(--font);
     font-size: var(--headerSize);
+    margin-left: 0.2em;
 }
 
 /*@media (max-width: 767px) {*/
@@ -233,7 +234,6 @@ blockquote {
 /*This is the top right allow sound button*/
 .top-right-button {
     position: absolute;
-
 
     top: 10px;
     right: 10px;
