--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: var(--font);
-    
 }
 
 ::selection {
@@ -143,13 +142,6 @@ header {
     margin-left: 0.2em;
 }
 
-/*@media (max-width: 767px) {*/
-/*    header {*/
-/*        font-size: 50px;*/
-/*    }*/
-/*}*/
-
-
 summary:hover {
     background-color: var(--amberTransp);
     color: var(--amber);
@@ -171,9 +163,6 @@ details {
     font-size: var(--textSize);
 }
 
-
-
-
 details[open] summary::after{
     content: "...";
 }
@@ -192,13 +181,6 @@ summary {
     cursor: grab;
     font-size: var(--summarySize);
 }
-
-/*
-h2::before{
-⭟ ⤹ ↳ ⮑ ⮱ ↪  ⮎ ⇲ ⬑ " "
-    content: "⇲";
-}
-*/
 
 h2 {
     padding-left: var(--indent);
@@ -223,6 +205,7 @@ blockquote {
     /* Adjust the left padding as needed */
     font-family: var(--font);
     font-weight: normal;
+    white-space: pre;
 }
 
 hr {
@@ -237,7 +220,6 @@ blockquote {
     border: 4px solid var(--amber);
     box-shadow: 0px 0px var(--bloomLine) var(--amber);
 }
-
 
 /*This is the top right allow sound button*/
 .top-right-button {
@@ -254,10 +236,7 @@ blockquote {
     cursor: pointer;
     
     filter: drop-shadow(0px 0px var(--bloomLine) var(--amber));
-
-    /*box-shadow: 0px 0px var(--bloomLine) var(--amber);*/
 }
-
 
 .bg-amber-transp{
     background-color: var(--amberTranspImage);
