--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@
     --bloomOff: 4mm;
     --bloomAmt: 30mm;
 
-    --bloomLine: 20px;
-    --bloomText: 1vh;
+    --bloomLine: 4vh;
+    --bloomText: 4vh;
 
     /*--fontSize: 75mm;*/
 
