--- a/style.css
+++ b/style.css
@@ -53,9 +53,10 @@ body {
     color: black;
 }
 
-body, body * {
+body,
+body * {
     text-shadow: 0px 0px var(--bloomText) var(--amber),
-    0px 0px var(--bloomText) var(--amber);
+        0px 0px var(--bloomText) var(--amber);
 }
 
 /* Scanlines */
@@ -104,18 +105,23 @@ body::after {
     0% {
         transform: translate(0, 0);
     }
+
     20% {
         transform: translate(-10%, 5%);
     }
+
     40% {
         transform: translate(15%, 0);
     }
+
     60% {
         transform: translate(-15%, 0);
     }
+
     80% {
         transform: translate(5%, -5%);
     }
+
     100% {
         transform: translate(0, 0);
     }
@@ -125,6 +131,7 @@ body::after {
     0% {
         background-position: 0 0;
     }
+
     100% {
         background-position: -1%;
         /* Adjust the value to control the scrolling speed */
@@ -135,7 +142,16 @@ a {
     color: var(--amber);
     text-decoration: underline;
     font-size: var(--subHeaderSize);
+    /*white-space: pre;*/
+}
+a::after {
     white-space: pre;
+    font-size: 0.8em;
+    content: "   \f2f5";
+    /* Use the appropriate Font Awesome icon code */
+    font-family: "Font Awesome 5 Free";
+    /* Specify the Font Awesome font family */
+    /* white-space: pre; Preserve white space, including tabs */
 }
 
 .line {
@@ -143,12 +159,7 @@ a {
     border-top: 0.4vh solid var(--amber);
 }
 
-a::after {
-    font-size: 0.8em;
-    content: "  \f2f5"; /* Use the appropriate Font Awesome icon code */
-    font-family: "Font Awesome 5 Free"; /* Specify the Font Awesome font family */
-    /* white-space: pre; Preserve white space, including tabs */
-}
+
 
 header {
     list-style: none;
@@ -259,3 +270,67 @@ hr {
     background-color: var(--amberTranspImage);
     box-shadow: 0px 0px var(--bloomLine) var(--amber);
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #FFBF00 #000000;
+  }
+  
+  /* Chrome, Edge and Safari */
+  *::-webkit-scrollbar {
+    width: 3px;
+    filter: drop-shadow(0px 0px var(--bloomLine) var(--amber));
+  }
+  *::-webkit-scrollbar-track {
+    border-radius: 0px;
+    background-color: #000000;
+  }
+  
+  *::-webkit-scrollbar-track:hover {
+    background-color: #000000;
+  }
+  
+  *::-webkit-scrollbar-track:active {
+    background-color: #000000;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+    background-color: #FFBF00;
+  }
+  
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: #FFBF00;
+  }
+  
+  *::-webkit-scrollbar-thumb:active {
+    background-color: #FFBF00;
+  }
+
+  ::-webkit-scrollbar-thumb:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 2px;
+  left: 0;
+  background-color: #000000;
+  z-index: -1;
+  filter: drop-shadow(0px 0px 5px var(--amber));
+}
+  
