--- a/style.css
+++ b/style.css
@@ -29,13 +29,13 @@
     /*--fontSize: 75mm;*/
 
     /*Actual Header*/
-    --headerSize: 8vh;
+    --headerSize: 8rem;
 
     /**/
-    --listSize: 3vh;
-    --subHeaderSize: 3vh;
-    --subtitleSize: 2vh;
-    --paraSize: 1.5vh;
+    --listSize: 3rem;
+    --subHeaderSize: 2.5rem;
+    --subtitleSize: 1.8rem;
+    --paraSize: 1.5rem;
 
     /*Courier New*/
 }
@@ -56,7 +56,7 @@ body {
 body,
 body * {
     text-shadow: 0px 0px var(--bloomText) var(--amber),
-        0px 0px var(--bloomText) var(--amber);
+    0px 0px var(--bloomText) var(--amber);
 }
 
 /* Scanlines */
@@ -144,6 +144,7 @@ a {
     font-size: var(--subHeaderSize);
     /*white-space: pre;*/
 }
+
 a::after {
     white-space: pre;
     font-size: 0.8em;
@@ -158,7 +159,6 @@ a::after {
     border: none;
     border-top: 0.4vh solid var(--amber);
 }
-
 
 
 header {
@@ -247,7 +247,16 @@ hr {
     border: 4px solid var(--amber);
     box-shadow: 0px 0px var(--bloomLine) var(--amber);
     width: var(--imageScale);
-    height: calc(var(--imageScale) / 1.77777778);
+    /*height: calc(var(--imageScale) / 1.77777778);*/
+    aspect-ratio: 16 / 9;
+}
+
+.four-by-three{
+    aspect-ratio: 4 / 3;
+}
+
+.one-by-one{
+    aspect-ratio: 1/1;
 }
 
 /*This is the top right allow sound button*/
@@ -272,65 +281,53 @@ hr {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Firefox */
 * {
     scrollbar-width: thin;
     scrollbar-color: #FFBF00 #000000;
-  }
-  
-  /* Chrome, Edge and Safari */
-  *::-webkit-scrollbar {
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
     width: 3px;
     filter: drop-shadow(0px 0px var(--bloomLine) var(--amber));
-  }
-  *::-webkit-scrollbar-track {
-    border-radius: 0px;
-    background-color: #000000;
-  }
-  
-  *::-webkit-scrollbar-track:hover {
-    background-color: #000000;
-  }
-  
-  *::-webkit-scrollbar-track:active {
-    background-color: #000000;
-  }
-  
-  *::-webkit-scrollbar-thumb {
-    border-radius: 0px;
-    background-color: #FFBF00;
-  }
-  
-  *::-webkit-scrollbar-thumb:hover {
-    background-color: #FFBF00;
-  }
-  
-  *::-webkit-scrollbar-thumb:active {
-    background-color: #FFBF00;
-  }
+}
 
-  ::-webkit-scrollbar-thumb:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 2px;
-  left: 0;
-  background-color: #000000;
-  z-index: -1;
-  filter: drop-shadow(0px 0px 5px var(--amber));
+*::-webkit-scrollbar-track {
+    border-radius: 0px;
+    background-color: #000000;
+}
+
+*::-webkit-scrollbar-track:hover {
+    background-color: #000000;
+}
+
+*::-webkit-scrollbar-track:active {
+    background-color: #000000;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+    background-color: #FFBF00;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #FFBF00;
+}
+
+*::-webkit-scrollbar-thumb:active {
+    background-color: #FFBF00;
+}
+
+::-webkit-scrollbar-thumb:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 2px;
+    left: 0;
+    background-color: #000000;
+    z-index: -1;
+    filter: drop-shadow(0px 0px 5px var(--amber));
 }
   
