Fixed static in firefox

--- a/style.css
+++ b/style.css
@@ -73,21 +73,7 @@ body::after {
     animation: scanlines 10s linear infinite;
 }
 
-.noise-layer {
-    position: fixed;
-    top: -50%;
-    left: -50%;
-    right: -50%;
-    bottom: -50%;
-    width: 200%;
-    height: 200vh;
-    background: transparent url('Icons/noise-transparent.png') repeat 0 0;
-    animation: static-noise 0.2s infinite;
-    opacity: 1;
-    visibility: visible;
-    pointer-events: none;
-    zoom: 500%;
-}
+
 
 .centerGradient {
     position: fixed;
@@ -99,7 +85,21 @@ body::after {
 
     background: radial-gradient(circle, rgba(255, 191, 0, 0.2) 0%, rgba(0, 0, 0, 0.1) 100%);
 }
-
+.noise-layer {
+    position: fixed;
+    top: -50rem;
+    left: -50rem;
+    right: -50rem;
+    bottom: -50rem;
+    width: 100rem;
+    height: 100rem;
+    background: transparent url('Icons/noise-transparent.png') repeat center;
+    animation: static-noise 0.2s infinite;
+    opacity: 0.6;
+    visibility: visible;
+    pointer-events: none;
+    scale: 500%;
+}
 
 @keyframes static-noise {
     0% {
@@ -107,19 +107,19 @@ body::after {
     }
 
     20% {
-        transform: translate(-10%, 5%);
+        transform: translate(-10rem, 5rem);
     }
 
     40% {
-        transform: translate(15%, 0);
+        transform: translate(15rem, 0);
     }
 
     60% {
-        transform: translate(-15%, 0);
+        transform: translate(-15rem, 0);
     }
 
     80% {
-        transform: translate(5%, -5%);
+        transform: translate(5rem, -5rem);
     }
 
     100% {
