--- a/style.css
+++ b/style.css
@@ -100,6 +100,25 @@ body::after {
     scale: 500%;
 }
 
+
+.screen-door {
+    background-image: url("ScreenDoor/ScreenOverlay.png");
+    transform: rotate(90);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    visibility: visible;
+    opacity: .1;
+    background-repeat: repeat;
+    background-size: 4%;
+}
+
+
 @keyframes static-noise {
     0% {
         transform: translate(0, 0);
