--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 body,
 body * {
     text-shadow: 0px 0px var(--bloomText) var(--amber),
-        0px 0px var(--bloomText) var(--amber);
+    0px 0px var(--bloomText) var(--amber);
 }
 
 /* Scanlines */
@@ -102,8 +102,7 @@ body::after {
 
 
 .screen-door {
-    background-image: url("ScreenDoor/ScreenOverlay.png");
-    transform: rotate(90);
+    background-image: url("ScreenDoor/ScreenOverlayRound.png");
     position: fixed;
     top: 0;
     left: 0;
@@ -115,7 +114,8 @@ body::after {
     visibility: visible;
     opacity: .1;
     background-repeat: repeat;
-    background-size: 4%;
+    background-size: 50px;
+    z-index: 100;
 }
 
 
@@ -300,7 +300,7 @@ hr {
     filter: drop-shadow(0px 0px var(--bloomLine) var(--amber));
 }
 
-strong{
+strong {
     font: var(--font);
     font-size: var(--paraSize);
 }
@@ -333,7 +333,6 @@ strong{
     float: right;
     padding: 2px;
 }
-
 
 
 .bg-amber-transp {
