--- a/style.css
+++ b/style.css
@@ -82,9 +82,10 @@ body::after {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: 200;
 
-    background: radial-gradient(circle, rgba(255, 191, 0, 0.2) 0%, rgba(0, 0, 0, 0.1) 100%);
+    background: radial-gradient(circle, rgba(255, 191, 0, 0.2) 0%, rgba(0, 0, 0, .1) 120%);
+    pointer-events: none;
 }
 
 .noise-layer {
@@ -318,6 +319,7 @@ strong {
     padding: 5px;
     box-shadow: 0px 0px var(--bloomLine) var(--amber);
     width: 80em;
+    margin-left: var(--indent);
 }
 
 #text-container-title {
