--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
     font-weight: bold;
 }
 */
-
+@font-face {
+    font-family: 'AAA';
+    src: url('Font/Nouveau_IBM.ttf');
+}
 
 :root {
     /*Left indent*/
@@ -57,7 +60,7 @@ body {
     font-family: var(--font);
 }
 
-/*text selection*/
+/*text selection highlight*/
 ::selection {
     background-color: var(--amber);
     color: black;
@@ -66,7 +69,7 @@ body {
 body,
 body * {
     text-shadow: 0px 0px var(--bloomText) var(--amber),
-        0px 0px var(--bloomText) var(--amber);
+    0px 0px var(--bloomText) var(--amber);
 }
 
 /* Scanlines */
@@ -97,7 +100,6 @@ body::after {
     background-color: black;
     z-index: 1;
     animation: IBM_FadeOut 3s steps(33) forwards 3s;
-
 }
 
 .splashscreen {
@@ -108,16 +110,8 @@ body::after {
     width: 100vw;
     height: 100vh;
 
-    /* Background properties
-    background-image: image-set(
-        url('Blend/IBM Text/splash_lowestres.png') 0.5x,
-        url('Blend/IBM Text/splash_lowres.png') 1x,
-        url('Blend/IBM Text/splash.png') 2x
+    background-image: url("Blend/IBM_Text/splash_lowestres.png");
 
-    );     */
-
-    background-image: url("Blend/IBM Text/splash_lowestres.png");
-    
     background-repeat: no-repeat;
     background-size: 50%;
     /* Adjust the value to control the size of the background image */
@@ -132,15 +126,15 @@ body::after {
 }
 
 @keyframes IBM_FadeOut {
-    0%{
+    0% {
         opacity: 100%;
     }
 
-    75%{
+    50% {
         pointer-events: none;
     }
-    
-    100%{
+
+    100% {
         opacity: 0;
         pointer-events: none;
     }
@@ -153,7 +147,6 @@ body::after {
         pointer-events: none;
     }
 }
-
 
 
 /* Center Gradient Glow*/
@@ -271,7 +264,6 @@ i {
     border-top: 0.4vh solid var(--amber);
     transform: scaleX(101%);
 }
-
 
 
 header {
@@ -401,7 +393,7 @@ strong {
 }
 
 /*Box around md*/
-#text-container {
+.text-container {
     box-sizing: border-box;
     padding: 5px;
     box-shadow: 0px 0px var(--bloomLine) var(--amber);
@@ -439,7 +431,7 @@ strong {
 /* Firefox */
 * {
     scrollbar-width: thin;
-    scrollbar-color: #FFBF00 #000000;
+    scrollbar-color: var(--amber) #000000;
 }
 
 /* Chrome, Edge and Safari */
@@ -463,15 +455,15 @@ strong {
 
 *::-webkit-scrollbar-thumb {
     border-radius: 0px;
-    background-color: #FFBF00;
+    background-color: var(--amber);
 }
 
 *::-webkit-scrollbar-thumb:hover {
-    background-color: #FFBF00;
+    background-color: var(--amber);
 }
 
 *::-webkit-scrollbar-thumb:active {
-    background-color: #FFBF00;
+    background-color: var(--amber);
 }
 
 ::-webkit-scrollbar-thumb:before {
