changes to blog style

--- a/_Blog/BlogStyle.css
+++ b/_Blog/BlogStyle.css
@@ -6,8 +6,8 @@
     --dim: rgba(0.1, .1, .1, .15);
 
     --textcol: #000000;
-    --0: #C2B2B4;
-    --1: #6c5a70;
+    --0: #a19e9e;
+    --1: #727272;
     --2: #3A4454;
     --3: #53687E;
     --4: #F5DDDD;
